[package]
name = "susurs"
version = "0.1.0"
edition = "2024"
description = "A fully offline Text-to-Speech CLI tool that converts text to MP3/WAV audio using local AI TTS models"
license = "MIT"
repository = "https://github.com/atareao/susurs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sherpa-onnx = "1.10" # Native Rust bindings for ONNX speech tools
ureq = "2.8" # HTTP client
dirs = "5.0" # Get XDG data directory
bzip2 = "0.4" # Bzip2 decompression
tar = "0.4" # Tar archive extraction
tracing = "0.1" # Logging and tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Log subscriber
hound = "3.5" # WAV file encoding
serde_json = "1.0" # JSON output support
shine-rs = "0.1.3" # Pure Rust MP3 encoder
